# math_teacher_bot

./: .gitignore  Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  math.rs  rand.rs
src/migrations/: 20250126_create_tables.sql
