[package]
name = "math_teacher_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
